# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: additional_workflow.yml  main.yml
gendiff/: all_formaters.py  comparison.py  generate_diff.py  json.py  parser.py  plain.py  sorting_result.py  stylish.py  work_data.py
gendiff/scripts/: gendiff.py
tests/: main_test.py
tests/fixtures/: file2.json
